@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2022-2023 Hedera Hashgraph, LLC
+ * Copyright (C) 2020-2023 Hedera Hashgraph, LLC
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -13,12 +13,12 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+
 package com.hedera.node.app.service.mono.queries.crypto;
 
 import static com.hedera.node.app.service.mono.utils.EntityNumPair.fromAccountTokenRel;
 import static com.hedera.test.utils.IdUtils.asAccount;
 import static com.hedera.test.utils.IdUtils.asContract;
-import static com.hedera.test.utils.IdUtils.tokenBalanceWith;
 import static com.hederahashgraph.api.proto.java.HederaFunctionality.CryptoGetAccountBalance;
 import static com.hederahashgraph.api.proto.java.ResponseCodeEnum.ACCOUNT_DELETED;
 import static com.hederahashgraph.api.proto.java.ResponseCodeEnum.CONTRACT_DELETED;
@@ -36,10 +36,10 @@ import com.google.protobuf.ByteString;
 import com.hedera.node.app.hapi.utils.ByteStringUtils;
 import com.hedera.node.app.service.mono.context.MutableStateChildren;
 import com.hedera.node.app.service.mono.context.primitives.StateView;
-import com.hedera.node.app.service.mono.context.properties.GlobalDynamicProperties;
 import com.hedera.node.app.service.mono.ledger.accounts.AliasManager;
 import com.hedera.node.app.service.mono.legacy.core.jproto.JEd25519Key;
 import com.hedera.node.app.service.mono.legacy.core.jproto.JKey;
+import com.hedera.node.app.service.mono.state.adapters.MerkleMapLike;
 import com.hedera.node.app.service.mono.state.merkle.MerkleAccount;
 import com.hedera.node.app.service.mono.state.merkle.MerkleToken;
 import com.hedera.node.app.service.mono.state.merkle.MerkleTokenRelStatus;
@@ -62,7 +62,7 @@ import com.hederahashgraph.api.proto.java.ResponseCodeEnum;
 import com.hederahashgraph.api.proto.java.ResponseType;
 import com.hederahashgraph.api.proto.java.TokenID;
 import com.swirlds.merkle.map.MerkleMap;
-import java.util.List;
+import java.util.Collections;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -71,33 +71,33 @@ import org.mockito.junit.jupiter.MockitoExtension;
 
 @ExtendWith(MockitoExtension.class)
 class GetAccountBalanceAnswerTest {
-    @Mock private AccountStorageAdapter accounts;
-    @Mock private GlobalDynamicProperties dynamicProperties;
-    @Mock private OptionValidator optionValidator;
-    @Mock private AliasManager aliasManager;
+    @Mock
+    private AccountStorageAdapter accounts;
+
+    @Mock
+    private OptionValidator optionValidator;
+
+    @Mock
+    private AliasManager aliasManager;
 
     private GetAccountBalanceAnswer subject;
 
     @BeforeEach
     void setup() {
-        subject = new GetAccountBalanceAnswer(aliasManager, optionValidator, dynamicProperties);
+        subject = new GetAccountBalanceAnswer(aliasManager, optionValidator);
     }
 
     @Test
     void requiresNothing() {
         // setup:
-        final CryptoGetAccountBalanceQuery costAnswerOp =
-                CryptoGetAccountBalanceQuery.newBuilder()
-                        .setHeader(
-                                QueryHeader.newBuilder().setResponseType(ResponseType.COST_ANSWER))
-                        .build();
+        final CryptoGetAccountBalanceQuery costAnswerOp = CryptoGetAccountBalanceQuery.newBuilder()
+                .setHeader(QueryHeader.newBuilder().setResponseType(ResponseType.COST_ANSWER))
+                .build();
         final Query costAnswerQuery =
                 Query.newBuilder().setCryptogetAccountBalance(costAnswerOp).build();
-        final CryptoGetAccountBalanceQuery answerOnlyOp =
-                CryptoGetAccountBalanceQuery.newBuilder()
-                        .setHeader(
-                                QueryHeader.newBuilder().setResponseType(ResponseType.ANSWER_ONLY))
-                        .build();
+        final CryptoGetAccountBalanceQuery answerOnlyOp = CryptoGetAccountBalanceQuery.newBuilder()
+                .setHeader(QueryHeader.newBuilder().setResponseType(ResponseType.ANSWER_ONLY))
+                .build();
         final Query answerOnlyQuery =
                 Query.newBuilder().setCryptogetAccountBalance(answerOnlyOp).build();
 
@@ -117,7 +117,8 @@ class GetAccountBalanceAnswerTest {
     @Test
     void syntaxCheckRequiresId() {
         // given:
-        final CryptoGetAccountBalanceQuery op = CryptoGetAccountBalanceQuery.newBuilder().build();
+        final CryptoGetAccountBalanceQuery op =
+                CryptoGetAccountBalanceQuery.newBuilder().build();
         final Query query = Query.newBuilder().setCryptogetAccountBalance(op).build();
 
         // when:
@@ -155,14 +156,10 @@ class GetAccountBalanceAnswerTest {
     @Test
     void getsValidity() {
         // given:
-        final Response response =
-                Response.newBuilder()
-                        .setCryptogetAccountBalance(
-                                CryptoGetAccountBalanceResponse.newBuilder()
-                                        .setHeader(
-                                                subject.answerOnlyHeader(
-                                                        RESULT_SIZE_LIMIT_EXCEEDED)))
-                        .build();
+        final Response response = Response.newBuilder()
+                .setCryptogetAccountBalance(CryptoGetAccountBalanceResponse.newBuilder()
+                        .setHeader(subject.answerOnlyHeader(RESULT_SIZE_LIMIT_EXCEEDED)))
+                .build();
 
         // expect:
         assertEquals(RESULT_SIZE_LIMIT_EXCEEDED, subject.extractValidityFrom(response));
@@ -179,8 +176,7 @@ class GetAccountBalanceAnswerTest {
         final Query query = Query.newBuilder().setCryptogetAccountBalance(op).build();
 
         // when:
-        final Response response =
-                subject.responseGiven(query, wellKnownView(), PLATFORM_NOT_ACTIVE);
+        final Response response = subject.responseGiven(query, wellKnownView(), PLATFORM_NOT_ACTIVE);
         final ResponseCodeEnum status =
                 response.getCryptogetAccountBalance().getHeader().getNodeTransactionPrecheckCode();
 
@@ -210,7 +206,8 @@ class GetAccountBalanceAnswerTest {
 
     @Test
     void resolvesContractAliasIfExtant() {
-        final var aliasedContractId = ContractID.newBuilder().setEvmAddress(evmAddress).build();
+        final var aliasedContractId =
+                ContractID.newBuilder().setEvmAddress(evmAddress).build();
         final var wellKnownId = EntityNum.fromLong(12345L);
         given(aliasManager.lookupIdBy(aliasedContractId.getEvmAddress())).willReturn(wellKnownId);
         given(accounts.get(wellKnownId)).willReturn(accountV);
@@ -234,7 +231,6 @@ class GetAccountBalanceAnswerTest {
         given(aliasManager.lookupIdBy(aliasId.getAlias())).willReturn(wellKnownId);
         accountV.setKey(EntityNum.fromAccountId(asAccount(accountIdLit)));
         given(accounts.get(wellKnownId)).willReturn(accountV);
-        given(dynamicProperties.maxTokensRelsPerInfoQuery()).willReturn(maxTokenRels);
 
         final CryptoGetAccountBalanceQuery op =
                 CryptoGetAccountBalanceQuery.newBuilder().setAccountID(aliasId).build();
@@ -247,12 +243,7 @@ class GetAccountBalanceAnswerTest {
 
         assertTrue(response.getCryptogetAccountBalance().hasHeader(), "Missing response header!");
         assertEquals(
-                List.of(
-                        tokenBalanceWith(aToken, aBalance, 1),
-                        tokenBalanceWith(bToken, bBalance, 2),
-                        tokenBalanceWith(cToken, cBalance, 123),
-                        tokenBalanceWith(dToken, dBalance, 123)),
-                response.getCryptogetAccountBalance().getTokenBalancesList());
+                Collections.emptyList(), response.getCryptogetAccountBalance().getTokenBalancesList());
         assertEquals(OK, status);
         assertEquals(balance, answer);
         assertEquals(
@@ -267,7 +258,6 @@ class GetAccountBalanceAnswerTest {
         final var wellKnownId = EntityNum.fromLong(12345L);
         accountV.setKey(EntityNum.fromAccountId(asAccount(accountIdLit)));
         given(accounts.get(wellKnownId)).willReturn(accountV);
-        given(dynamicProperties.maxTokensRelsPerInfoQuery()).willReturn(maxTokenRels);
 
         // when:
         final Response response = subject.responseGiven(query, wellKnownView(), OK);
@@ -277,13 +267,9 @@ class GetAccountBalanceAnswerTest {
 
         // expect:
         assertTrue(response.getCryptogetAccountBalance().hasHeader(), "Missing response header!");
+        // we don't return token balances data in the query anymore since it is deprecated
         assertEquals(
-                List.of(
-                        tokenBalanceWith(aToken, aBalance, 1),
-                        tokenBalanceWith(bToken, bBalance, 2),
-                        tokenBalanceWith(cToken, cBalance, 123),
-                        tokenBalanceWith(dToken, dBalance, 123)),
-                response.getCryptogetAccountBalance().getTokenBalancesList());
+                Collections.emptyList(), response.getCryptogetAccountBalance().getTokenBalancesList());
         assertEquals(OK, status);
         assertEquals(balance, answer);
         assertEquals(id, response.getCryptogetAccountBalance().getAccountID());
@@ -297,7 +283,6 @@ class GetAccountBalanceAnswerTest {
         accountV.setKey(EntityNum.fromAccountId(asAccount(accountIdLit)));
         final var view = wellKnownView();
         given(accounts.get(EntityNum.fromContractId(id))).willReturn(accountV);
-        given(dynamicProperties.maxTokensRelsPerInfoQuery()).willReturn(maxTokenRels);
 
         // when:
         final Response response = subject.responseGiven(query, view, OK);
@@ -308,15 +293,11 @@ class GetAccountBalanceAnswerTest {
         // expect:
         assertTrue(response.getCryptogetAccountBalance().hasHeader(), "Missing response header!");
         assertEquals(
-                List.of(
-                        tokenBalanceWith(aToken, aBalance, 1),
-                        tokenBalanceWith(bToken, bBalance, 2),
-                        tokenBalanceWith(cToken, cBalance, 123),
-                        tokenBalanceWith(dToken, dBalance, 123)),
-                response.getCryptogetAccountBalance().getTokenBalancesList());
+                Collections.emptyList(), response.getCryptogetAccountBalance().getTokenBalancesList());
         assertEquals(OK, status);
         assertEquals(balance, answer);
-        assertEquals(asAccount(accountIdLit), response.getCryptogetAccountBalance().getAccountID());
+        assertEquals(
+                asAccount(accountIdLit), response.getCryptogetAccountBalance().getAccountID());
     }
 
     private Query contractQueryWith(final ContractID id) {
@@ -346,8 +327,7 @@ class GetAccountBalanceAnswerTest {
     }
 
     private StateView wellKnownView() {
-        final TokenRelStorageAdapter tokenRels =
-                TokenRelStorageAdapter.fromInMemory(new MerkleMap<>());
+        final TokenRelStorageAdapter tokenRels = TokenRelStorageAdapter.fromInMemory(new MerkleMap<>());
         tokenRels.put(aKey, aRel);
         aRel.setNext(bToken.getTokenNum());
         tokenRels.put(bKey, bRel);
@@ -368,7 +348,7 @@ class GetAccountBalanceAnswerTest {
         final ScheduleStore scheduleStore = mock(ScheduleStore.class);
 
         final MutableStateChildren children = new MutableStateChildren();
-        children.setTokens(tokens);
+        children.setTokens(MerkleMapLike.from(tokens));
         children.setAccounts(accounts);
         children.setTokenAssociations(tokenRels);
         return new StateView(scheduleStore, children, null);
@@ -394,18 +374,14 @@ class GetAccountBalanceAnswerTest {
     private final MerkleToken alsoNotDeleted = new MerkleToken();
     private final MerkleToken deleted = new MerkleToken();
     private final MerkleToken andAlsoNotDeleted = new MerkleToken();
-    private final MerkleAccount accountV =
-            MerkleAccountFactory.newAccount()
-                    .balance(balance)
-                    .tokens(aToken, bToken, cToken, dToken)
-                    .get();
+    private final MerkleAccount accountV = MerkleAccountFactory.newAccount()
+            .balance(balance)
+            .tokens(aToken, bToken, cToken, dToken)
+            .get();
     private final MerkleTokenRelStatus aRel = new MerkleTokenRelStatus(aBalance, true, true, true);
-    private final MerkleTokenRelStatus bRel =
-            new MerkleTokenRelStatus(bBalance, false, false, false);
-    private final MerkleTokenRelStatus cRel =
-            new MerkleTokenRelStatus(cBalance, false, false, true);
-    private final MerkleTokenRelStatus dRel =
-            new MerkleTokenRelStatus(dBalance, false, false, true);
+    private final MerkleTokenRelStatus bRel = new MerkleTokenRelStatus(bBalance, false, false, false);
+    private final MerkleTokenRelStatus cRel = new MerkleTokenRelStatus(cBalance, false, false, true);
+    private final MerkleTokenRelStatus dRel = new MerkleTokenRelStatus(dBalance, false, false, true);
 
     {
         deleted.setDeleted(true);
