@@ -13,6 +13,7 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+
 package com.hedera.node.app.service.mono.store.contracts.precompile;
 
 import static com.hedera.node.app.service.mono.context.BasicTransactionContext.EMPTY_KEY;
@@ -28,6 +29,8 @@ import static com.hedera.node.app.service.mono.store.contracts.precompile.HTSTes
 import static com.hedera.node.app.service.mono.store.contracts.precompile.HTSTestsUtil.payer;
 import static com.hedera.node.app.service.mono.store.contracts.precompile.HTSTestsUtil.receiver;
 import static com.hedera.node.app.service.mono.store.contracts.precompile.HTSTestsUtil.royaltyFee;
+import static com.hedera.node.app.service.mono.store.contracts.precompile.HTSTestsUtil.sender;
+import static com.hedera.node.app.service.mono.store.contracts.precompile.HTSTestsUtil.senderId;
 import static com.hedera.node.app.service.mono.store.contracts.precompile.HTSTestsUtil.token;
 import static com.hedera.node.app.service.mono.store.contracts.precompile.SyntheticTxnFactory.MOCK_INITCODE;
 import static com.hedera.node.app.service.mono.store.contracts.precompile.SyntheticTxnFactory.WEIBARS_TO_TINYBARS;
@@ -84,6 +87,7 @@ import com.hedera.node.app.service.mono.store.contracts.precompile.codec.WipeWra
 import com.hedera.node.app.service.mono.store.models.Id;
 import com.hedera.node.app.service.mono.utils.EntityIdUtils;
 import com.hedera.node.app.service.mono.utils.EntityNum;
+import com.hedera.node.app.service.token.Units;
 import com.hedera.test.factories.keys.KeyFactory;
 import com.hedera.test.utils.IdUtils;
 import com.hedera.test.utils.TxnUtils;
@@ -102,10 +106,10 @@ import com.hederahashgraph.api.proto.java.TokenTransferList;
 import com.hederahashgraph.api.proto.java.TokenType;
 import com.hederahashgraph.api.proto.java.TransferList;
 import java.math.BigInteger;
+import java.security.InvalidKeyException;
 import java.time.Instant;
 import java.util.Collections;
 import java.util.List;
-import org.apache.commons.codec.DecoderException;
 import org.apache.tuweni.bytes.Bytes;
 import org.bouncycastle.util.encoders.Hex;
 import org.hyperledger.besu.datatypes.Address;
@@ -117,8 +121,12 @@ import org.mockito.junit.jupiter.MockitoExtension;
 
 @ExtendWith(MockitoExtension.class)
 class SyntheticTxnFactoryTest {
-    @Mock private EthTxData ethTxData;
-    @Mock private ContractCustomizer customizer;
+    @Mock
+    private EthTxData ethTxData;
+
+    @Mock
+    private ContractCustomizer customizer;
+
     private GlobalDynamicProperties dynamicProperties;
     private BootstrapProperties propertySource;
 
@@ -128,8 +136,7 @@ class SyntheticTxnFactoryTest {
     void setUp() {
         propertySource = new BootstrapProperties();
         propertySource.ensureProps();
-        dynamicProperties =
-                new GlobalDynamicProperties(new HederaNumbers(propertySource), propertySource);
+        dynamicProperties = new GlobalDynamicProperties(new HederaNumbers(propertySource), propertySource);
 
         subject = new SyntheticTxnFactory(dynamicProperties);
     }
@@ -138,33 +145,24 @@ class SyntheticTxnFactoryTest {
     void synthesizesExpectedTreasuryReturns() {
         final var ftId = EntityId.fromIdentityCode(666);
         final var nftId = EntityId.fromIdentityCode(777);
-        final var nftAdjusts =
-                new NftAdjustments(
-                        new long[] {1},
-                        List.of(EntityId.fromIdentityCode(2)),
-                        List.of(EntityId.fromIdentityCode(98)));
-        final var fungibleAdjusts =
-                new CurrencyAdjustments(new long[] {-123, 123}, new long[] {2, 98});
-        final var fungibleReturns =
-                new FungibleTreasuryReturns(List.of(ftId), List.of(fungibleAdjusts), true);
-        final var nonFungibleReturns =
-                new NonFungibleTreasuryReturns(List.of(nftId), List.of(nftAdjusts), true);
+        final var nftAdjusts = new NftAdjustments(
+                new long[] {1}, List.of(EntityId.fromIdentityCode(2)), List.of(EntityId.fromIdentityCode(98)));
+        final var fungibleAdjusts = new CurrencyAdjustments(new long[] {-123, 123}, new long[] {2, 98});
+        final var fungibleReturns = new FungibleTreasuryReturns(List.of(ftId), List.of(fungibleAdjusts), true);
+        final var nonFungibleReturns = new NonFungibleTreasuryReturns(List.of(nftId), List.of(nftAdjusts), true);
         final var returns = new CryptoGcOutcome(fungibleReturns, nonFungibleReturns, false);
 
-        final var expected =
-                CryptoTransferTransactionBody.newBuilder()
-                        .addTokenTransfers(
-                                TokenTransferList.newBuilder()
-                                        .setToken(ftId.asId().asGrpcToken())
-                                        .addTransfers(aaWith(2, -123))
-                                        .addTransfers(aaWith(98, +123))
-                                        .build())
-                        .addTokenTransfers(
-                                TokenTransferList.newBuilder()
-                                        .setToken(nftId.asId().asGrpcToken())
-                                        .addNftTransfers(nftFromTo(1, 2, 98))
-                                        .build())
-                        .build();
+        final var expected = CryptoTransferTransactionBody.newBuilder()
+                .addTokenTransfers(TokenTransferList.newBuilder()
+                        .setToken(ftId.asId().asGrpcToken())
+                        .addTransfers(aaWith(2, -123))
+                        .addTransfers(aaWith(98, +123))
+                        .build())
+                .addTokenTransfers(TokenTransferList.newBuilder()
+                        .setToken(nftId.asId().asGrpcToken())
+                        .addNftTransfers(nftFromTo(1, 2, 98))
+                        .build())
+                .build();
 
         final var txn = subject.synthTokenTransfer(returns).build();
         final var op = txn.getCryptoTransfer();
@@ -176,31 +174,23 @@ class SyntheticTxnFactoryTest {
     void synthesizesExpectedBurn() {
         final var ftId = EntityId.fromIdentityCode(666);
         final var nftId = EntityId.fromIdentityCode(777);
-        final var nftAdjusts =
-                new NftAdjustments(
-                        new long[] {1},
-                        List.of(EntityId.fromIdentityCode(2)),
-                        List.of(EntityId.fromIdentityCode(98)));
+        final var nftAdjusts = new NftAdjustments(
+                new long[] {1}, List.of(EntityId.fromIdentityCode(2)), List.of(EntityId.fromIdentityCode(98)));
         final var fungibleAdjusts = new CurrencyAdjustments(new long[] {-123}, new long[] {2});
-        final var fungibleReturns =
-                new FungibleTreasuryReturns(List.of(ftId), List.of(fungibleAdjusts), true);
-        final var nonFungibleReturns =
-                new NonFungibleTreasuryReturns(List.of(nftId), List.of(nftAdjusts), true);
+        final var fungibleReturns = new FungibleTreasuryReturns(List.of(ftId), List.of(fungibleAdjusts), true);
+        final var nonFungibleReturns = new NonFungibleTreasuryReturns(List.of(nftId), List.of(nftAdjusts), true);
         final var returns = new CryptoGcOutcome(fungibleReturns, nonFungibleReturns, false);
 
-        final var expected =
-                CryptoTransferTransactionBody.newBuilder()
-                        .addTokenTransfers(
-                                TokenTransferList.newBuilder()
-                                        .setToken(ftId.asId().asGrpcToken())
-                                        .addTransfers(aaWith(2, -123))
-                                        .build())
-                        .addTokenTransfers(
-                                TokenTransferList.newBuilder()
-                                        .setToken(nftId.asId().asGrpcToken())
-                                        .addNftTransfers(nftFromTo(1, 2, 98))
-                                        .build())
-                        .build();
+        final var expected = CryptoTransferTransactionBody.newBuilder()
+                .addTokenTransfers(TokenTransferList.newBuilder()
+                        .setToken(ftId.asId().asGrpcToken())
+                        .addTransfers(aaWith(2, -123))
+                        .build())
+                .addTokenTransfers(TokenTransferList.newBuilder()
+                        .setToken(nftId.asId().asGrpcToken())
+                        .addNftTransfers(nftFromTo(1, 2, 98))
+                        .build())
+                .build();
 
         final var txn = subject.synthTokenTransfer(returns).build();
         final var op = txn.getCryptoTransfer();
@@ -211,14 +201,12 @@ class SyntheticTxnFactoryTest {
     @Test
     void synthesizesExpectedCryptoTransfer() {
         final var adjustments = new CurrencyAdjustments(new long[] {-123, 123}, new long[] {2, 98});
-        final var expected =
-                CryptoTransferTransactionBody.newBuilder()
-                        .setTransfers(
-                                TransferList.newBuilder()
-                                        .addAccountAmounts(aaWith(2, -123))
-                                        .addAccountAmounts(aaWith(98, +123))
-                                        .build())
-                        .build();
+        final var expected = CryptoTransferTransactionBody.newBuilder()
+                .setTransfers(TransferList.newBuilder()
+                        .addAccountAmounts(aaWith(2, -123))
+                        .addAccountAmounts(aaWith(98, +123))
+                        .build())
+                .build();
 
         final var txn = subject.synthHbarTransfer(adjustments).build();
         final var op = txn.getCryptoTransfer();
@@ -234,8 +222,9 @@ class SyntheticTxnFactoryTest {
         given(ethTxData.gasLimit()).willReturn(gasLimit);
         given(ethTxData.value()).willReturn(value);
         given(ethTxData.to()).willReturn(addressTo);
-        final var expectedId =
-                ContractID.newBuilder().setEvmAddress(ByteString.copyFrom(ethTxData.to())).build();
+        final var expectedId = ContractID.newBuilder()
+                .setEvmAddress(ByteString.copyFrom(ethTxData.to()))
+                .build();
 
         final var synthBody = subject.synthPrecheckContractOpFromEth(ethTxData);
 
@@ -255,8 +244,9 @@ class SyntheticTxnFactoryTest {
         given(ethTxData.gasLimit()).willReturn(gasLimit);
         given(ethTxData.value()).willReturn(value);
         given(ethTxData.to()).willReturn(addressTo);
-        final var expectedId =
-                ContractID.newBuilder().setEvmAddress(ByteString.copyFrom(ethTxData.to())).build();
+        final var expectedId = ContractID.newBuilder()
+                .setEvmAddress(ByteString.copyFrom(ethTxData.to()))
+                .build();
 
         final var optSynthBody = subject.synthContractOpFromEth(ethTxData);
         assertTrue(optSynthBody.isPresent());
@@ -276,8 +266,9 @@ class SyntheticTxnFactoryTest {
         given(ethTxData.gasLimit()).willReturn(gasLimit);
         given(ethTxData.value()).willReturn(value);
         given(ethTxData.to()).willReturn(addressTo);
-        final var expectedId =
-                ContractID.newBuilder().setEvmAddress(ByteString.copyFrom(ethTxData.to())).build();
+        final var expectedId = ContractID.newBuilder()
+                .setEvmAddress(ByteString.copyFrom(ethTxData.to()))
+                .build();
 
         final var optSynthBody = subject.synthContractOpFromEth(ethTxData);
         assertTrue(optSynthBody.isPresent());
@@ -466,19 +457,18 @@ class SyntheticTxnFactoryTest {
                 txnBody.getCryptoCreateAccount().getAutoRenewPeriod().getSeconds());
         assertEquals(10L, txnBody.getCryptoCreateAccount().getInitialBalance());
         assertEquals(0L, txnBody.getCryptoCreateAccount().getMaxAutomaticTokenAssociations());
-        assertEquals(key.toByteString(), txnBody.getCryptoCreateAccount().getKey().toByteString());
+        assertEquals(
+                key.toByteString(), txnBody.getCryptoCreateAccount().getKey().toByteString());
         assertEquals(alias, txnBody.getCryptoCreateAccount().getAlias());
     }
 
     @Test
-    void createsExpectedCryptoCreateWithECKeyAlias() throws DecoderException {
+    void createsExpectedCryptoCreateWithECKeyAlias() throws InvalidKeyException {
         final var balance = 10L;
         final var key = KeyFactory.getDefaultInstance().newEcdsaSecp256k1();
         final var alias = key.toByteString();
-        final var evmAddress =
-                ByteString.copyFrom(
-                        EthSigsUtils.recoverAddressFromPubKey(
-                                JKey.mapKey(key).getECDSASecp256k1Key()));
+        final var evmAddress = ByteString.copyFrom(
+                EthSigsUtils.recoverAddressFromPubKey(JKey.mapKey(key).getECDSASecp256k1Key()));
         final var result = subject.createAccount(alias, key, balance, 0);
         final var txnBody = result.build();
 
@@ -489,39 +479,36 @@ class SyntheticTxnFactoryTest {
                 txnBody.getCryptoCreateAccount().getAutoRenewPeriod().getSeconds());
         assertEquals(10L, txnBody.getCryptoCreateAccount().getInitialBalance());
         assertEquals(0L, txnBody.getCryptoCreateAccount().getMaxAutomaticTokenAssociations());
-        assertEquals(key.toByteString(), txnBody.getCryptoCreateAccount().getKey().toByteString());
+        assertEquals(
+                key.toByteString(), txnBody.getCryptoCreateAccount().getKey().toByteString());
         assertEquals(alias, txnBody.getCryptoCreateAccount().getAlias());
     }
 
     @Test
     void createsExpectedHollowAccountCreate() {
         final var balance = 10L;
-        final var evmAddressAlias =
-                ByteString.copyFrom(Hex.decode("a94f5374fce5edbc8e2a8697c15331677e6ebf0b"));
-        final var result = subject.createHollowAccount(evmAddressAlias, balance);
+        final var evmAddressAlias = ByteString.copyFrom(Hex.decode("a94f5374fce5edbc8e2a8697c15331677e6ebf0b"));
+        final var result = subject.createHollowAccount(evmAddressAlias, balance, 1);
         final var txnBody = result.build();
 
         assertTrue(txnBody.hasCryptoCreateAccount());
         assertEquals(asKeyUnchecked(EMPTY_KEY), txnBody.getCryptoCreateAccount().getKey());
         assertEquals(evmAddressAlias, txnBody.getCryptoCreateAccount().getAlias());
         assertEquals(
-                EntityIdUtils.EVM_ADDRESS_SIZE, txnBody.getCryptoCreateAccount().getAlias().size());
+                EntityIdUtils.EVM_ADDRESS_SIZE,
+                txnBody.getCryptoCreateAccount().getAlias().size());
         assertEquals(LAZY_MEMO, txnBody.getCryptoCreateAccount().getMemo());
         assertEquals(
                 THREE_MONTHS_IN_SECONDS,
                 txnBody.getCryptoCreateAccount().getAutoRenewPeriod().getSeconds());
         assertEquals(10L, txnBody.getCryptoCreateAccount().getInitialBalance());
-        assertEquals(0L, txnBody.getCryptoCreateAccount().getMaxAutomaticTokenAssociations());
+        assertEquals(1L, txnBody.getCryptoCreateAccount().getMaxAutomaticTokenAssociations());
     }
 
     @Test
     void createsExpectedHollowAccountUpdate() {
-        final var edcsaSecp256K1Bytes =
-                ByteString.copyFrom(new byte[] {0x02})
-                        .concat(
-                                TxnUtils.randomUtf8ByteString(
-                                        JECDSASecp256k1Key.ECDSA_SECP256K1_COMPRESSED_KEY_LENGTH
-                                                - 1));
+        final var edcsaSecp256K1Bytes = ByteString.copyFrom(new byte[] {0x02})
+                .concat(TxnUtils.randomUtf8ByteString(JECDSASecp256k1Key.ECDSA_SECP256K1_COMPRESSED_KEY_LENGTH - 1));
         final var aKey = Key.newBuilder().setECDSASecp256K1(edcsaSecp256K1Bytes).build();
 
         final var result = subject.updateHollowAccount(accountNum, aKey);
@@ -530,8 +517,7 @@ class SyntheticTxnFactoryTest {
         assertTrue(txnBody.hasCryptoUpdateAccount());
         assertEquals(aKey, txnBody.getCryptoUpdateAccount().getKey());
         assertEquals(
-                accountNum.toGrpcAccountId(),
-                txnBody.getCryptoUpdateAccount().getAccountIDToUpdate());
+                accountNum.toGrpcAccountId(), txnBody.getCryptoUpdateAccount().getAccountIDToUpdate());
     }
 
     @Test
@@ -549,7 +535,8 @@ class SyntheticTxnFactoryTest {
                 txnBody.getCryptoCreateAccount().getAutoRenewPeriod().getSeconds());
         assertEquals(10L, txnBody.getCryptoCreateAccount().getInitialBalance());
         assertEquals(1, txnBody.getCryptoCreateAccount().getMaxAutomaticTokenAssociations());
-        assertEquals(key.toByteString(), txnBody.getCryptoCreateAccount().getKey().toByteString());
+        assertEquals(
+                key.toByteString(), txnBody.getCryptoCreateAccount().getKey().toByteString());
         assertEquals(alias, txnBody.getCryptoCreateAccount().getAlias());
     }
 
@@ -558,13 +545,12 @@ class SyntheticTxnFactoryTest {
         final var balance = 10L;
         final var key = KeyFactory.getDefaultInstance().newEd25519();
         final var alias = key.toByteString();
-        final var xfer =
-                NftTransfer.newBuilder()
-                        .setSenderAccountID(asAliasAccount(ByteString.copyFromUtf8("somebody")))
-                        .setReceiverAccountID(a)
-                        .setSerialNumber(serialNo)
-                        .setIsApproval(true)
-                        .build();
+        final var xfer = NftTransfer.newBuilder()
+                .setSenderAccountID(asAliasAccount(ByteString.copyFromUtf8("somebody")))
+                .setReceiverAccountID(a)
+                .setSerialNumber(serialNo)
+                .setIsApproval(true)
+                .build();
 
         final var nftChange = changingNftOwnership(Id.fromGrpcToken(token), token, xfer, payer);
 
@@ -579,34 +565,46 @@ class SyntheticTxnFactoryTest {
                 txnBody.getCryptoCreateAccount().getAutoRenewPeriod().getSeconds());
         assertEquals(10L, txnBody.getCryptoCreateAccount().getInitialBalance());
         assertEquals(1L, txnBody.getCryptoCreateAccount().getMaxAutomaticTokenAssociations());
-        assertEquals(key.toByteString(), txnBody.getCryptoCreateAccount().getKey().toByteString());
+        assertEquals(
+                key.toByteString(), txnBody.getCryptoCreateAccount().getKey().toByteString());
         assertEquals(alias, txnBody.getCryptoCreateAccount().getAlias());
     }
 
     @Test
     void createsExpectedNodeStakeUpdate() {
         final var now = Instant.now();
-        final var timestamp =
-                Timestamp.newBuilder()
-                        .setSeconds(now.getEpochSecond())
-                        .setNanos(now.getNano())
-                        .build();
-        final var nodeStakes =
-                List.of(
-                        NodeStake.newBuilder()
-                                .setStake(123_456_789L)
-                                .setStakeRewarded(1_234_567L)
-                                .build(),
-                        NodeStake.newBuilder()
-                                .setStake(987_654_321L)
-                                .setStakeRewarded(54_321L)
-                                .build());
+        final var timestamp = Timestamp.newBuilder()
+                .setSeconds(now.getEpochSecond())
+                .setNanos(now.getNano())
+                .build();
+        final var nodeStakes = List.of(
+                NodeStake.newBuilder()
+                        .setStake(123_456_789L)
+                        .setStakeRewarded(1_234_567L)
+                        .build(),
+                NodeStake.newBuilder()
+                        .setStake(987_654_321L)
+                        .setStakeRewarded(54_321L)
+                        .build());
+        final var synthStakeRewardedStart =
+                nodeStakes.stream().mapToLong(NodeStake::getStakeRewarded).sum();
         propertySource.ensureProps();
-        dynamicProperties =
-                new GlobalDynamicProperties(new HederaNumbers(propertySource), propertySource);
+        dynamicProperties = new GlobalDynamicProperties(new HederaNumbers(propertySource), propertySource);
         subject = new SyntheticTxnFactory(dynamicProperties);
 
-        final var txnBody = subject.nodeStakeUpdate(timestamp, nodeStakes, propertySource);
+        final var reservedStakingRewards = 666_666_666_666L;
+        final var unreservedStakingRewardBalance = 777_777_777_777L;
+        final var maxScaledRewardRate = 6_849L * 2 / 3;
+        final var txnBody = subject.nodeStakeUpdate(
+                timestamp,
+                nodeStakes,
+                propertySource,
+                synthStakeRewardedStart,
+                maxScaledRewardRate,
+                reservedStakingRewards,
+                unreservedStakingRewardBalance,
+                dynamicProperties.stakingRewardBalanceThreshold(),
+                dynamicProperties.maxStakeRewarded());
 
         assertTrue(txnBody.hasNodeStakeUpdate());
         assertEquals(timestamp, txnBody.getNodeStakeUpdate().getEndOfStakingPeriod());
@@ -614,7 +612,7 @@ class SyntheticTxnFactoryTest {
         assertEquals(1_234_567L, txnBody.getNodeStakeUpdate().getNodeStake(0).getStakeRewarded());
         assertEquals(987_654_321L, txnBody.getNodeStakeUpdate().getNodeStake(1).getStake());
         assertEquals(54_321L, txnBody.getNodeStakeUpdate().getNodeStake(1).getStakeRewarded());
-        assertEquals(17_808L, txnBody.getNodeStakeUpdate().getMaxStakingRewardRatePerHbar());
+        assertEquals(maxScaledRewardRate, txnBody.getNodeStakeUpdate().getMaxStakingRewardRatePerHbar());
         assertEquals(0L, txnBody.getNodeStakeUpdate().getNodeRewardFeeFraction().getNumerator());
         assertEquals(
                 100L, txnBody.getNodeStakeUpdate().getNodeRewardFeeFraction().getDenominator());
@@ -624,9 +622,14 @@ class SyntheticTxnFactoryTest {
                 100L, txnBody.getNodeStakeUpdate().getStakingRewardFeeFraction().getNumerator());
         assertEquals(
                 100L, txnBody.getNodeStakeUpdate().getStakingRewardFeeFraction().getDenominator());
-        assertEquals(
-                25_000_000_000_000_000L, txnBody.getNodeStakeUpdate().getStakingStartThreshold());
-        assertEquals(0L, txnBody.getNodeStakeUpdate().getStakingRewardRate());
+        assertEquals(25_000_000_000_000_000L, txnBody.getNodeStakeUpdate().getStakingStartThreshold());
+        final var expectedMaxTotalReward = (synthStakeRewardedStart / Units.HBARS_TO_TINYBARS) * maxScaledRewardRate;
+        final var synthUpdate = txnBody.getNodeStakeUpdate();
+        assertEquals(expectedMaxTotalReward, synthUpdate.getStakingRewardRate());
+        assertEquals(expectedMaxTotalReward, synthUpdate.getMaxTotalReward());
+        assertEquals(reservedStakingRewards, synthUpdate.getReservedStakingRewards());
+        assertEquals(dynamicProperties.stakingRewardBalanceThreshold(), synthUpdate.getRewardBalanceThreshold());
+        assertEquals(dynamicProperties.maxStakeRewarded(), synthUpdate.getMaxStakeRewarded());
     }
 
     @Test
@@ -692,21 +695,22 @@ class SyntheticTxnFactoryTest {
         final var amount = BigInteger.ONE;
         final var allowances = new ApproveWrapper(token, receiver, amount, BigInteger.ZERO, true);
 
-        final var result = subject.createFungibleApproval(allowances);
+        final var result = subject.createFungibleApproval(allowances, senderId);
         final var txnBody = result.build();
 
         assertEquals(
                 amount.longValue(),
                 txnBody.getCryptoApproveAllowance().getTokenAllowances(0).getAmount());
-        assertEquals(token, txnBody.getCryptoApproveAllowance().getTokenAllowances(0).getTokenId());
         assertEquals(
-                receiver, txnBody.getCryptoApproveAllowance().getTokenAllowances(0).getSpender());
+                token, txnBody.getCryptoApproveAllowance().getTokenAllowances(0).getTokenId());
+        final var allowance = txnBody.getCryptoApproveAllowance().getTokenAllowances(0);
+        assertEquals(senderId.toGrpcAccountId(), allowance.getOwner());
+        assertEquals(receiver, allowance.getSpender());
     }
 
     @Test
     void createsExpectedNonfungibleApproveAllowanceWithOwnerAsOperator() {
-        final var allowances =
-                new ApproveWrapper(token, receiver, BigInteger.ZERO, BigInteger.ONE, false);
+        final var allowances = new ApproveWrapper(token, receiver, BigInteger.ZERO, BigInteger.ONE, false);
         final var ownerId = new EntityId(0, 0, 666);
 
         final var result = subject.createNonfungibleApproval(allowances, ownerId, ownerId);
@@ -722,8 +726,7 @@ class SyntheticTxnFactoryTest {
 
     @Test
     void createsExpectedNonfungibleApproveAllowanceWithNonOwnerOperator() {
-        final var allowances =
-                new ApproveWrapper(token, receiver, BigInteger.ZERO, BigInteger.ONE, false);
+        final var allowances = new ApproveWrapper(token, receiver, BigInteger.ZERO, BigInteger.ONE, false);
         final var ownerId = new EntityId(0, 0, 666);
         final var operatorId = new EntityId(0, 0, 777);
 
@@ -740,8 +743,7 @@ class SyntheticTxnFactoryTest {
 
     @Test
     void createsExpectedNonfungibleApproveAllowanceWithoutOwner() {
-        final var allowances =
-                new ApproveWrapper(token, receiver, BigInteger.ZERO, BigInteger.ONE, false);
+        final var allowances = new ApproveWrapper(token, receiver, BigInteger.ZERO, BigInteger.ONE, false);
         final var operatorId = new EntityId(0, 0, 666);
 
         final var result = subject.createNonfungibleApproval(allowances, null, operatorId);
@@ -758,13 +760,17 @@ class SyntheticTxnFactoryTest {
     void createsAdjustAllowanceForAllNFT() {
         final var allowances = new SetApprovalForAllWrapper(nonFungible, receiver, true);
 
-        final var result = subject.createApproveAllowanceForAllNFT(allowances);
+        final var result = subject.createApproveAllowanceForAllNFT(allowances, senderId);
         final var txnBody = result.build();
 
         assertEquals(
-                receiver, txnBody.getCryptoApproveAllowance().getNftAllowances(0).getSpender());
+                receiver,
+                txnBody.getCryptoApproveAllowance().getNftAllowances(0).getSpender());
         assertEquals(
-                nonFungible, txnBody.getCryptoApproveAllowance().getNftAllowances(0).getTokenId());
+                sender, txnBody.getCryptoApproveAllowance().getNftAllowances(0).getOwner());
+        assertEquals(
+                nonFungible,
+                txnBody.getCryptoApproveAllowance().getNftAllowances(0).getTokenId());
         assertEquals(
                 BoolValue.of(true),
                 txnBody.getCryptoApproveAllowance().getNftAllowances(0).getApprovedForAll());
@@ -772,15 +778,14 @@ class SyntheticTxnFactoryTest {
 
     @Test
     void createsDeleteAllowance() {
-        final var allowances =
-                new ApproveWrapper(token, receiver, BigInteger.ZERO, BigInteger.ONE, false);
+        final var allowances = new ApproveWrapper(token, receiver, BigInteger.ZERO, BigInteger.ONE, false);
 
         final var result = subject.createDeleteAllowance(allowances, HTSTestsUtil.senderId);
         final var txnBody = result.build();
 
-        assertEquals(token, txnBody.getCryptoDeleteAllowance().getNftAllowances(0).getTokenId());
         assertEquals(
-                1L, txnBody.getCryptoDeleteAllowance().getNftAllowances(0).getSerialNumbers(0));
+                token, txnBody.getCryptoDeleteAllowance().getNftAllowances(0).getTokenId());
+        assertEquals(1L, txnBody.getCryptoDeleteAllowance().getNftAllowances(0).getSerialNumbers(0));
         assertEquals(
                 HTSTestsUtil.sender,
                 txnBody.getCryptoDeleteAllowance().getNftAllowances(0).getOwner());
@@ -819,25 +824,12 @@ class SyntheticTxnFactoryTest {
     @Test
     void createsExpectedFungibleTokenCreate() {
         // given
-        final var adminKey =
-                new KeyValueWrapper(
-                        false,
-                        null,
-                        new byte[] {},
-                        new byte[] {},
-                        contractIdFromEvmAddress(contractAddress));
-        final var multiKey =
-                new KeyValueWrapper(
-                        false,
-                        contractIdFromEvmAddress(contractAddress),
-                        new byte[] {},
-                        new byte[] {},
-                        null);
-        final var wrapper =
-                createTokenCreateWrapperWithKeys(
-                        List.of(
-                                new TokenKeyWrapper(254, multiKey),
-                                new TokenKeyWrapper(1, adminKey)));
+        final var adminKey = new KeyValueWrapper(
+                false, null, new byte[] {}, new byte[] {}, contractIdFromEvmAddress(contractAddress));
+        final var multiKey = new KeyValueWrapper(
+                false, contractIdFromEvmAddress(contractAddress), new byte[] {}, new byte[] {}, null);
+        final var wrapper = createTokenCreateWrapperWithKeys(
+                List.of(new TokenKeyWrapper(254, multiKey), new TokenKeyWrapper(1, adminKey)));
         wrapper.setFixedFees(List.of(fixedFee));
         wrapper.setFractionalFees(List.of(fractionalFee));
 
@@ -881,16 +873,10 @@ class SyntheticTxnFactoryTest {
     @Test
     void createsExpectedNonFungibleTokenCreate() {
         // given
-        final var multiKey =
-                new KeyValueWrapper(
-                        false,
-                        contractIdFromEvmAddress(contractAddress),
-                        new byte[] {},
-                        new byte[] {},
-                        null);
+        final var multiKey = new KeyValueWrapper(
+                false, contractIdFromEvmAddress(contractAddress), new byte[] {}, new byte[] {}, null);
         final var wrapper =
-                HTSTestsUtil.createNonFungibleTokenCreateWrapperWithKeys(
-                        List.of(new TokenKeyWrapper(112, multiKey)));
+                HTSTestsUtil.createNonFungibleTokenCreateWrapperWithKeys(List.of(new TokenKeyWrapper(112, multiKey)));
         wrapper.setFixedFees(List.of(fixedFee));
         wrapper.setRoyaltyFees(List.of(royaltyFee));
 
@@ -931,14 +917,10 @@ class SyntheticTxnFactoryTest {
 
     @Test
     void createsExpectedCryptoTransfer() {
-        final var fungibleTransfer =
-                new SyntheticTxnFactory.FungibleTokenTransfer(secondAmount, false, fungible, b, a);
+        final var fungibleTransfer = new SyntheticTxnFactory.FungibleTokenTransfer(secondAmount, false, fungible, b, a);
 
-        final var result =
-                subject.createCryptoTransfer(
-                        List.of(
-                                new TokenTransferWrapper(
-                                        Collections.emptyList(), List.of(fungibleTransfer))));
+        final var result = subject.createCryptoTransfer(
+                List.of(new TokenTransferWrapper(Collections.emptyList(), List.of(fungibleTransfer))));
         final var txnBody = result.build();
 
         final var tokenTransfers = txnBody.getCryptoTransfer().getTokenTransfersList();
@@ -952,25 +934,12 @@ class SyntheticTxnFactoryTest {
     @Test
     void createsExpectedTokenUpdateCallForFungible() {
         // given
-        final var adminKey =
-                new KeyValueWrapper(
-                        false,
-                        null,
-                        new byte[] {},
-                        new byte[] {},
-                        contractIdFromEvmAddress(contractAddress));
-        final var multiKey =
-                new KeyValueWrapper(
-                        false,
-                        contractIdFromEvmAddress(contractAddress),
-                        new byte[] {},
-                        new byte[] {},
-                        null);
-        final var tokenUpdateWrapper =
-                createFungibleTokenUpdateWrapperWithKeys(
-                        List.of(
-                                new TokenKeyWrapper(112, multiKey),
-                                new TokenKeyWrapper(1, adminKey)));
+        final var adminKey = new KeyValueWrapper(
+                false, null, new byte[] {}, new byte[] {}, contractIdFromEvmAddress(contractAddress));
+        final var multiKey = new KeyValueWrapper(
+                false, contractIdFromEvmAddress(contractAddress), new byte[] {}, new byte[] {}, null);
+        final var tokenUpdateWrapper = createFungibleTokenUpdateWrapperWithKeys(
+                List.of(new TokenKeyWrapper(112, multiKey), new TokenKeyWrapper(1, adminKey)));
         final var result = subject.createTokenUpdate(tokenUpdateWrapper);
         final var txnBody = result.build().getTokenUpdate();
 
@@ -996,27 +965,15 @@ class SyntheticTxnFactoryTest {
     @Test
     void createsExpectedTokenUpdateCallForNonFungible() {
         // given
-        final var ComplexKey =
-                new KeyValueWrapper(
-                        false,
-                        null,
-                        new byte[] {},
-                        new byte[] {},
-                        contractIdFromEvmAddress(contractAddress));
-        final var multiKey =
-                new KeyValueWrapper(
-                        false,
-                        contractIdFromEvmAddress(contractAddress),
-                        new byte[] {},
-                        new byte[] {},
-                        null);
-        final var wrapper =
-                createNonFungibleTokenUpdateWrapperWithKeys(
-                        List.of(
-                                new TokenKeyWrapper(112, multiKey),
-                                new TokenKeyWrapper(2, ComplexKey),
-                                new TokenKeyWrapper(4, ComplexKey),
-                                new TokenKeyWrapper(8, ComplexKey)));
+        final var ComplexKey = new KeyValueWrapper(
+                false, null, new byte[] {}, new byte[] {}, contractIdFromEvmAddress(contractAddress));
+        final var multiKey = new KeyValueWrapper(
+                false, contractIdFromEvmAddress(contractAddress), new byte[] {}, new byte[] {}, null);
+        final var wrapper = createNonFungibleTokenUpdateWrapperWithKeys(List.of(
+                new TokenKeyWrapper(112, multiKey),
+                new TokenKeyWrapper(2, ComplexKey),
+                new TokenKeyWrapper(4, ComplexKey),
+                new TokenKeyWrapper(8, ComplexKey)));
 
         // when
         final var result = subject.createTokenUpdate(wrapper);
@@ -1040,26 +997,12 @@ class SyntheticTxnFactoryTest {
     @Test
     void createsExpectedTokenUpdateKeysCallForFungible() {
         // given
-        final var adminKey =
-                new KeyValueWrapper(
-                        false,
-                        null,
-                        new byte[] {},
-                        new byte[] {},
-                        contractIdFromEvmAddress(contractAddress));
-        final var multiKey =
-                new KeyValueWrapper(
-                        false,
-                        contractIdFromEvmAddress(contractAddress),
-                        new byte[] {},
-                        new byte[] {},
-                        null);
-        final var tokenUpdateKeysWrapper =
-                new TokenUpdateKeysWrapper(
-                        fungible,
-                        List.of(
-                                new TokenKeyWrapper(112, multiKey),
-                                new TokenKeyWrapper(1, adminKey)));
+        final var adminKey = new KeyValueWrapper(
+                false, null, new byte[] {}, new byte[] {}, contractIdFromEvmAddress(contractAddress));
+        final var multiKey = new KeyValueWrapper(
+                false, contractIdFromEvmAddress(contractAddress), new byte[] {}, new byte[] {}, null);
+        final var tokenUpdateKeysWrapper = new TokenUpdateKeysWrapper(
+                fungible, List.of(new TokenKeyWrapper(112, multiKey), new TokenKeyWrapper(1, adminKey)));
         final var result = subject.createTokenUpdateKeys(tokenUpdateKeysWrapper);
         final var txnBody = result.build().getTokenUpdate();
 
@@ -1084,27 +1027,20 @@ class SyntheticTxnFactoryTest {
 
     @Test
     void canCreateApprovedNftExchanges() {
-        final var approvedExchange =
-                SyntheticTxnFactory.NftExchange.fromApproval(1L, nonFungible, a, b);
+        final var approvedExchange = SyntheticTxnFactory.NftExchange.fromApproval(1L, nonFungible, a, b);
         assertTrue(approvedExchange.isApproval());
     }
 
     @Test
     void mergesRepeatedTokenIds() {
-        final var fungibleTransfer =
-                new SyntheticTxnFactory.FungibleTokenTransfer(secondAmount, false, fungible, b, a);
+        final var fungibleTransfer = new SyntheticTxnFactory.FungibleTokenTransfer(secondAmount, false, fungible, b, a);
         final var nonFungibleTransfer = new SyntheticTxnFactory.NftExchange(1L, nonFungible, a, b);
         assertFalse(nonFungibleTransfer.isApproval());
 
-        final var result =
-                subject.createCryptoTransfer(
-                        List.of(
-                                new TokenTransferWrapper(
-                                        Collections.emptyList(), List.of(fungibleTransfer)),
-                                new TokenTransferWrapper(
-                                        Collections.emptyList(), List.of(fungibleTransfer)),
-                                new TokenTransferWrapper(
-                                        List.of(nonFungibleTransfer), Collections.emptyList())));
+        final var result = subject.createCryptoTransfer(List.of(
+                new TokenTransferWrapper(Collections.emptyList(), List.of(fungibleTransfer)),
+                new TokenTransferWrapper(Collections.emptyList(), List.of(fungibleTransfer)),
+                new TokenTransferWrapper(List.of(nonFungibleTransfer), Collections.emptyList())));
 
         final var txnBody = result.build();
 
@@ -1113,19 +1049,15 @@ class SyntheticTxnFactoryTest {
         final var mergedFungible = finalTransfers.get(0);
         assertEquals(fungible, mergedFungible.getToken());
         assertEquals(
-                List.of(aaWith(b, -2 * secondAmount), aaWith(a, +2 * secondAmount)),
-                mergedFungible.getTransfersList());
+                List.of(aaWith(b, -2 * secondAmount), aaWith(a, +2 * secondAmount)), mergedFungible.getTransfersList());
     }
 
     @Test
     void createsExpectedCryptoTransferForNFTTransfer() {
         final var nftExchange = new SyntheticTxnFactory.NftExchange(serialNo, nonFungible, a, c);
 
-        final var result =
-                subject.createCryptoTransfer(
-                        Collections.singletonList(
-                                new TokenTransferWrapper(
-                                        List.of(nftExchange), Collections.emptyList())));
+        final var result = subject.createCryptoTransfer(
+                Collections.singletonList(new TokenTransferWrapper(List.of(nftExchange), Collections.emptyList())));
         final var txnBody = result.build();
 
         final var tokenTransfers = txnBody.getCryptoTransfer().getTokenTransfersList();
@@ -1137,14 +1069,10 @@ class SyntheticTxnFactoryTest {
 
     @Test
     void createsExpectedCryptoTransferForFungibleTransfer() {
-        final var fungibleTransfer =
-                new SyntheticTxnFactory.FungibleTokenTransfer(secondAmount, false, fungible, b, a);
+        final var fungibleTransfer = new SyntheticTxnFactory.FungibleTokenTransfer(secondAmount, false, fungible, b, a);
 
-        final var result =
-                subject.createCryptoTransfer(
-                        Collections.singletonList(
-                                new TokenTransferWrapper(
-                                        Collections.emptyList(), List.of(fungibleTransfer))));
+        final var result = subject.createCryptoTransfer(Collections.singletonList(
+                new TokenTransferWrapper(Collections.emptyList(), List.of(fungibleTransfer))));
         final var txnBody = result.build();
 
         final var tokenTransfers = txnBody.getCryptoTransfer().getTokenTransfersList();
@@ -1159,16 +1087,11 @@ class SyntheticTxnFactoryTest {
     @Test
     void createsExpectedCryptoTransfersForMultipleTransferWrappers() {
         final var nftExchange = new SyntheticTxnFactory.NftExchange(serialNo, nonFungible, a, c);
-        final var fungibleTransfer =
-                new SyntheticTxnFactory.FungibleTokenTransfer(secondAmount, false, fungible, b, a);
+        final var fungibleTransfer = new SyntheticTxnFactory.FungibleTokenTransfer(secondAmount, false, fungible, b, a);
 
-        final var result =
-                subject.createCryptoTransfer(
-                        List.of(
-                                new TokenTransferWrapper(
-                                        Collections.emptyList(), List.of(fungibleTransfer)),
-                                new TokenTransferWrapper(
-                                        List.of(nftExchange), Collections.emptyList())));
+        final var result = subject.createCryptoTransfer(List.of(
+                new TokenTransferWrapper(Collections.emptyList(), List.of(fungibleTransfer)),
+                new TokenTransferWrapper(List.of(nftExchange), Collections.emptyList())));
         final var txnBody = result.build();
 
         final var tokenTransfers = txnBody.getCryptoTransfer().getTokenTransfersList();
@@ -1186,20 +1109,14 @@ class SyntheticTxnFactoryTest {
 
     @Test
     void mergesFungibleTransfersAsExpected() {
-        final var source =
-                new TokenTransferWrapper(
-                                Collections.emptyList(),
-                                List.of(
-                                        new SyntheticTxnFactory.FungibleTokenTransfer(
-                                                1, false, fungible, a, b)))
-                        .asGrpcBuilder();
-        final var target =
-                new TokenTransferWrapper(
-                                Collections.emptyList(),
-                                List.of(
-                                        new SyntheticTxnFactory.FungibleTokenTransfer(
-                                                2, false, fungible, b, c)))
-                        .asGrpcBuilder();
+        final var source = new TokenTransferWrapper(
+                        Collections.emptyList(),
+                        List.of(new SyntheticTxnFactory.FungibleTokenTransfer(1, false, fungible, a, b)))
+                .asGrpcBuilder();
+        final var target = new TokenTransferWrapper(
+                        Collections.emptyList(),
+                        List.of(new SyntheticTxnFactory.FungibleTokenTransfer(2, false, fungible, b, c)))
+                .asGrpcBuilder();
 
         SyntheticTxnFactory.mergeTokenTransfers(target, source);
 
@@ -1210,18 +1127,13 @@ class SyntheticTxnFactoryTest {
 
     @Test
     void createsExpectedCryptoTransferForFungibleAndHbarTransfer() {
-        final var fungibleTransfer =
-                new SyntheticTxnFactory.FungibleTokenTransfer(secondAmount, false, fungible, b, a);
+        final var fungibleTransfer = new SyntheticTxnFactory.FungibleTokenTransfer(secondAmount, false, fungible, b, a);
 
         final var hbarTransfer = new SyntheticTxnFactory.HbarTransfer(secondAmount, false, a, b);
 
-        final var result =
-                subject.createCryptoTransfer(
-                        Collections.singletonList(
-                                new TokenTransferWrapper(
-                                        Collections.emptyList(), List.of(fungibleTransfer))));
-        final var resultHBar =
-                subject.createCryptoTransferForHbar(new TransferWrapper(List.of(hbarTransfer)));
+        final var result = subject.createCryptoTransfer(Collections.singletonList(
+                new TokenTransferWrapper(Collections.emptyList(), List.of(fungibleTransfer))));
+        final var resultHBar = subject.createCryptoTransferForHbar(new TransferWrapper(List.of(hbarTransfer)));
 
         result.mergeFrom(resultHBar);
 
@@ -1248,14 +1160,10 @@ class SyntheticTxnFactoryTest {
         final var nftExchange = new SyntheticTxnFactory.NftExchange(serialNo, nonFungible, a, c);
         final var hbarTransfer = new SyntheticTxnFactory.HbarTransfer(secondAmount, false, a, b);
 
-        final var result =
-                subject.createCryptoTransfer(
-                        Collections.singletonList(
-                                new TokenTransferWrapper(
-                                        List.of(nftExchange), Collections.emptyList())));
+        final var result = subject.createCryptoTransfer(
+                Collections.singletonList(new TokenTransferWrapper(List.of(nftExchange), Collections.emptyList())));
 
-        final var resultHBar =
-                subject.createCryptoTransferForHbar(new TransferWrapper(List.of(hbarTransfer)));
+        final var resultHBar = subject.createCryptoTransferForHbar(new TransferWrapper(List.of(hbarTransfer)));
 
         result.mergeFrom(resultHBar);
         final var txnBody = result.build();
@@ -1279,8 +1187,7 @@ class SyntheticTxnFactoryTest {
         final var hbarTransfer = new SyntheticTxnFactory.HbarTransfer(secondAmount, false, a, b);
 
         final var result = subject.createCryptoTransfer(Collections.emptyList());
-        final var resultHBar =
-                subject.createCryptoTransferForHbar(new TransferWrapper(List.of(hbarTransfer)));
+        final var resultHBar = subject.createCryptoTransferForHbar(new TransferWrapper(List.of(hbarTransfer)));
 
         result.mergeFrom(resultHBar);
 
@@ -1300,18 +1207,12 @@ class SyntheticTxnFactoryTest {
     @Test
     void createsExpectedCryptoTransferTokensOnlyTransfer() {
         final var nftExchange = new SyntheticTxnFactory.NftExchange(serialNo, nonFungible, a, c);
-        final var fungibleTransfer =
-                new SyntheticTxnFactory.FungibleTokenTransfer(secondAmount, false, fungible, b, a);
+        final var fungibleTransfer = new SyntheticTxnFactory.FungibleTokenTransfer(secondAmount, false, fungible, b, a);
 
-        final var result =
-                subject.createCryptoTransfer(
-                        List.of(
-                                new TokenTransferWrapper(
-                                        Collections.emptyList(), List.of(fungibleTransfer)),
-                                new TokenTransferWrapper(
-                                        List.of(nftExchange), Collections.emptyList())));
-        final var resultHBar =
-                subject.createCryptoTransferForHbar(new TransferWrapper(Collections.emptyList()));
+        final var result = subject.createCryptoTransfer(List.of(
+                new TokenTransferWrapper(Collections.emptyList(), List.of(fungibleTransfer)),
+                new TokenTransferWrapper(List.of(nftExchange), Collections.emptyList())));
+        final var resultHBar = subject.createCryptoTransferForHbar(new TransferWrapper(Collections.emptyList()));
 
         result.mergeFrom(resultHBar);
         final var txnBody = result.build();
@@ -1337,13 +1238,9 @@ class SyntheticTxnFactoryTest {
     void mergesNftExchangesAsExpected() {
         final var repeatedExchange = new SyntheticTxnFactory.NftExchange(1L, nonFungible, a, b);
         final var newExchange = new SyntheticTxnFactory.NftExchange(2L, nonFungible, a, b);
-        final var source =
-                new TokenTransferWrapper(
-                                List.of(repeatedExchange, newExchange), Collections.emptyList())
-                        .asGrpcBuilder();
-        final var target =
-                new TokenTransferWrapper(List.of(repeatedExchange), Collections.emptyList())
-                        .asGrpcBuilder();
+        final var source = new TokenTransferWrapper(List.of(repeatedExchange, newExchange), Collections.emptyList())
+                .asGrpcBuilder();
+        final var target = new TokenTransferWrapper(List.of(repeatedExchange), Collections.emptyList()).asGrpcBuilder();
 
         SyntheticTxnFactory.mergeTokenTransfers(target, source);
 
@@ -1354,21 +1251,15 @@ class SyntheticTxnFactoryTest {
 
     @Test
     void distinguishesDifferentExchangeBuilders() {
-        final var subject =
-                new SyntheticTxnFactory.NftExchange(1L, nonFungible, a, b).asGrpc().toBuilder();
+        final var subject = new SyntheticTxnFactory.NftExchange(1L, nonFungible, a, b).asGrpc().toBuilder();
 
         final var differentSerialNo = new SyntheticTxnFactory.NftExchange(2L, nonFungible, a, b);
         final var differentSender = new SyntheticTxnFactory.NftExchange(1L, nonFungible, c, b);
         final var differentReceiver = new SyntheticTxnFactory.NftExchange(1L, nonFungible, a, c);
 
-        assertFalse(
-                SyntheticTxnFactory.areSameBuilder(
-                        subject, differentSerialNo.asGrpc().toBuilder()));
-        assertFalse(
-                SyntheticTxnFactory.areSameBuilder(
-                        subject, differentReceiver.asGrpc().toBuilder()));
-        assertFalse(
-                SyntheticTxnFactory.areSameBuilder(subject, differentSender.asGrpc().toBuilder()));
+        assertFalse(SyntheticTxnFactory.areSameBuilder(subject, differentSerialNo.asGrpc().toBuilder()));
+        assertFalse(SyntheticTxnFactory.areSameBuilder(subject, differentReceiver.asGrpc().toBuilder()));
+        assertFalse(SyntheticTxnFactory.areSameBuilder(subject, differentSender.asGrpc().toBuilder()));
     }
 
     @Test
@@ -1460,7 +1351,8 @@ class SyntheticTxnFactoryTest {
         return NftTransfer.newBuilder()
                 .setSerialNumber(num)
                 .setSenderAccountID(AccountID.newBuilder().setAccountNum(sender).build())
-                .setReceiverAccountID(AccountID.newBuilder().setAccountNum(receiver).build())
+                .setReceiverAccountID(
+                        AccountID.newBuilder().setAccountNum(receiver).build())
                 .build();
     }
 
@@ -1473,8 +1365,7 @@ class SyntheticTxnFactoryTest {
 
     @Test
     void createsExpectedUpdateTokenExpiryInfo() {
-        final var updateExpiryInfo =
-                new TokenUpdateExpiryInfoWrapper(token, new TokenExpiryWrapper(442L, payer, 555L));
+        final var updateExpiryInfo = new TokenUpdateExpiryInfoWrapper(token, new TokenExpiryWrapper(442L, payer, 555L));
 
         final var result = subject.createTokenUpdateExpiryInfo(updateExpiryInfo);
         final var txnBody = result.build();
@@ -1487,8 +1378,7 @@ class SyntheticTxnFactoryTest {
 
     @Test
     void createsExpectedUpdateTokenExpiryInfoWithZeroExpiry() {
-        final var updateExpiryInfo =
-                new TokenUpdateExpiryInfoWrapper(token, new TokenExpiryWrapper(0L, payer, 555L));
+        final var updateExpiryInfo = new TokenUpdateExpiryInfoWrapper(token, new TokenExpiryWrapper(0L, payer, 555L));
 
         final var result = subject.createTokenUpdateExpiryInfo(updateExpiryInfo);
         final var txnBody = result.build();
@@ -1501,8 +1391,7 @@ class SyntheticTxnFactoryTest {
 
     @Test
     void createsExpectedUpdateTokenExpiryInfoWithZeroAutoRenewPeriod() {
-        final var updateExpiryInfo =
-                new TokenUpdateExpiryInfoWrapper(token, new TokenExpiryWrapper(442L, payer, 0L));
+        final var updateExpiryInfo = new TokenUpdateExpiryInfoWrapper(token, new TokenExpiryWrapper(442L, payer, 0L));
 
         final var result = subject.createTokenUpdateExpiryInfo(updateExpiryInfo);
         final var txnBody = result.build();
@@ -1515,8 +1404,7 @@ class SyntheticTxnFactoryTest {
 
     @Test
     void createsExpectedUpdateTokenExpiryInfoWithNoAutoRenewAccount() {
-        final var updateExpiryInfo =
-                new TokenUpdateExpiryInfoWrapper(token, new TokenExpiryWrapper(442L, null, 555L));
+        final var updateExpiryInfo = new TokenUpdateExpiryInfoWrapper(token, new TokenExpiryWrapper(442L, null, 555L));
 
         final var result = subject.createTokenUpdateExpiryInfo(updateExpiryInfo);
         final var txnBody = result.build();
@@ -1528,7 +1416,10 @@ class SyntheticTxnFactoryTest {
     }
 
     private AccountAmount aaWith(final AccountID account, final long amount) {
-        return AccountAmount.newBuilder().setAccountID(account).setAmount(amount).build();
+        return AccountAmount.newBuilder()
+                .setAccountID(account)
+                .setAmount(amount)
+                .build();
     }
 
     private static final long serialNo = 100;
@@ -1543,13 +1434,9 @@ class SyntheticTxnFactoryTest {
     private static final TokenID nonFungible = IdUtils.asToken("0.0.666");
     private static final List<Long> targetSerialNos = List.of(1L, 2L, 3L);
     private static final List<ByteString> newMetadata =
-            List.of(
-                    ByteString.copyFromUtf8("AAA"),
-                    ByteString.copyFromUtf8("BBB"),
-                    ByteString.copyFromUtf8("CCC"));
+            List.of(ByteString.copyFromUtf8("AAA"), ByteString.copyFromUtf8("BBB"), ByteString.copyFromUtf8("CCC"));
     private static final long valueInTinyBars = 123;
-    private static final BigInteger value =
-            WEIBARS_TO_TINYBARS.multiply(BigInteger.valueOf(valueInTinyBars));
+    private static final BigInteger value = WEIBARS_TO_TINYBARS.multiply(BigInteger.valueOf(valueInTinyBars));
     private static final long gasLimit = 123;
     private static final byte[] callData = "Between the idea and the reality".getBytes();
     private static final byte[] addressTo = unhex("abcdefabcdefabcdefbabcdefabcdefabcdefbbb");
